@@ -55,6 +55,7 @@ import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.UIManager;
 
+import jakarta.annotation.Nullable;
 import org.openstreetmap.josm.actions.RestartAction;
 import org.openstreetmap.josm.data.Preferences;
 import org.openstreetmap.josm.data.PreferencesUtils;
@@ -89,6 +90,17 @@ import org.openstreetmap.josm.tools.Utils;
  * @since 1326
  */
 public final class PluginHandler {
+    private static final String DIALOGS = "dialogs";
+    private static final String WARNING = marktr("Warning");
+    private static final String HTML_START = "<html>";
+    private static final String HTML_END = "</html>";
+    private static final String UPDATE_PLUGINS = marktr("Update plugins");
+    private static final String CANCEL = "cancel";
+    private static final String PLUGINS = "plugins";
+    private static final String DISABLE_PLUGIN = marktr("Disable plugin");
+    private static final String PLUGINMANAGER_VERSION_BASED_UPDATE_POLICY = "pluginmanager.version-based-update.policy";
+    private static final String PLUGINMANAGER_LASTUPDATE = "pluginmanager.lastupdate";
+    private static final String PLUGINMANAGER_TIME_BASED_UPDATE_POLICY = "pluginmanager.time-based-update.policy";
 
     /**
      * Deprecated plugins that are removed on start
@@ -170,7 +182,8 @@ public final class PluginHandler {
             new DeprecatedPlugin("javafx-unixoid", inCore),
             new DeprecatedPlugin("javafx-windows", inCore),
             new DeprecatedPlugin("wikidata", tr(replacedByPlugin, "osmwiki-dataitem")),
-            new DeprecatedPlugin("mapdust", noLongerRequired)
+            new DeprecatedPlugin("mapdust", noLongerRequired),
+            new DeprecatedPlugin("tofix", noLongerRequired)
         );
         Collections.sort(DEPRECATED_PLUGINS);
     }
@@ -196,10 +209,10 @@ public final class PluginHandler {
             Map<Object, Object> sorted = new TreeMap<>(Comparator.comparing(String::valueOf));
             sorted.putAll(info.attr);
             for (Entry<Object, Object> e : sorted.entrySet()) {
-                b.append(e.getKey());
-                b.append(": ");
-                b.append(e.getValue());
-                b.append('\n');
+                b.append(e.getKey())
+                        .append(": ")
+                        .append(e.getValue())
+                        .append('\n');
             }
             return b.toString();
         }
@@ -274,7 +287,7 @@ public final class PluginHandler {
     /**
      * List of unmaintained plugins. Not really up-to-date as the vast majority of plugins are not maintained after a few months, sadly...
      */
-    static final List<String> UNMAINTAINED_PLUGINS = Collections.unmodifiableList(Arrays.asList(
+    static final List<String> UNMAINTAINED_PLUGINS = List.of(
         "irsrectify", // See https://josm.openstreetmap.de/changeset/29404/osm/
         "surveyor2", // See https://josm.openstreetmap.de/changeset/29404/osm/
         "gpsbabelgui",
@@ -282,7 +295,7 @@ public final class PluginHandler {
         "ContourOverlappingMerge", // See #11202, #11518, https://github.com/bularcasergiu/ContourOverlappingMerge/issues/1
         "LaneConnector",           // See #11468, #11518, https://github.com/TrifanAdrian/LanecConnectorPlugin/issues/1
         "Remove.redundant.points"  // See #11468, #11518, https://github.com/bularcasergiu/RemoveRedundantPoints (not even created an issue...)
-    ));
+    );
 
     /**
      * Default time-based update interval, in days (pluginmanager.time-based-update.interval)
@@ -384,7 +397,7 @@ public final class PluginHandler {
         for (DeprecatedPlugin depr : DEPRECATED_PLUGINS) {
             if (plugins.contains(depr.name)) {
                 plugins.remove(depr.name);
-                PreferencesUtils.removeFromList(Config.getPref(), "plugins", depr.name);
+                PreferencesUtils.removeFromList(Config.getPref(), PLUGINS, depr.name);
                 removedPlugins.add(depr);
             }
         }
@@ -396,14 +409,14 @@ public final class PluginHandler {
         JOptionPane.showMessageDialog(
                 parent,
                 getRemovedPluginsMessage(removedPlugins),
-                tr("Warning"),
+                tr(WARNING),
                 JOptionPane.WARNING_MESSAGE
         );
     }
 
     static String getRemovedPluginsMessage(Collection<DeprecatedPlugin> removedPlugins) {
         StringBuilder sb = new StringBuilder(32);
-        sb.append("<html>")
+        sb.append(HTML_START)
           .append(trn(
                 "The following plugin is no longer necessary and has been deactivated:",
                 "The following plugins are no longer necessary and have been deactivated:",
@@ -416,7 +429,7 @@ public final class PluginHandler {
             }
             sb.append("</li>");
         }
-        sb.append("</ul></html>");
+        sb.append("</ul>").append(HTML_END);
         return sb.toString();
     }
 
@@ -436,7 +449,7 @@ public final class PluginHandler {
                 continue;
             }
             if (confirmDisablePlugin(parent, getUnmaintainedPluginMessage(unmaintained), unmaintained)) {
-                PreferencesUtils.removeFromList(Config.getPref(), "plugins", unmaintained);
+                PreferencesUtils.removeFromList(Config.getPref(), PLUGINS, unmaintained);
                 plugins.remove(unmaintained);
             }
         }
@@ -469,26 +482,26 @@ public final class PluginHandler {
         int v = Version.getInstance().getVersion();
         if (Config.getPref().getInt("pluginmanager.version", 0) < v) {
             message =
-                "<html>"
+                HTML_START
                 + tr("You updated your JOSM software.<br>"
                         + "To prevent problems the plugins should be updated as well.<br><br>"
                         + "Update plugins now?"
                 )
-                + "</html>";
-            togglePreferenceKey = "pluginmanager.version-based-update.policy";
+                + HTML_END;
+            togglePreferenceKey = PLUGINMANAGER_VERSION_BASED_UPDATE_POLICY;
         } else {
             long tim = System.currentTimeMillis();
-            long last = Config.getPref().getLong("pluginmanager.lastupdate", 0);
+            long last = Config.getPref().getLong(PLUGINMANAGER_LASTUPDATE, 0);
             int maxTime = Config.getPref().getInt("pluginmanager.time-based-update.interval", DEFAULT_TIME_BASED_UPDATE_INTERVAL);
             long d = TimeUnit.MILLISECONDS.toDays(tim - last);
             if ((last <= 0) || (maxTime <= 0)) {
-                Config.getPref().put("pluginmanager.lastupdate", Long.toString(tim));
+                Config.getPref().put(PLUGINMANAGER_LASTUPDATE, Long.toString(tim));
             } else if (d > maxTime) {
                 message =
-                    "<html>"
+                    HTML_START
                     + tr("Last plugin update more than {0} days ago.", d)
-                    + "</html>";
-                togglePreferenceKey = "pluginmanager.time-based-update.policy";
+                    + HTML_END;
+                togglePreferenceKey = PLUGINMANAGER_TIME_BASED_UPDATE_POLICY;
             }
         }
         if (message == null) return false;
@@ -500,19 +513,19 @@ public final class PluginHandler {
         // check whether automatic update at startup was disabled
         //
         String policy = Config.getPref().get(togglePreferenceKey, "ask").trim().toLowerCase(Locale.ENGLISH);
-        switch(policy) {
+        switch (policy) {
         case "never":
-            if ("pluginmanager.version-based-update.policy".equals(togglePreferenceKey)) {
+            if (PLUGINMANAGER_VERSION_BASED_UPDATE_POLICY.equals(togglePreferenceKey)) {
                 Logging.info(tr("Skipping plugin update after JOSM upgrade. Automatic update at startup is disabled."));
-            } else if ("pluginmanager.time-based-update.policy".equals(togglePreferenceKey)) {
+            } else if (PLUGINMANAGER_TIME_BASED_UPDATE_POLICY.equals(togglePreferenceKey)) {
                 Logging.info(tr("Skipping plugin update after elapsed update interval. Automatic update at startup is disabled."));
             }
             return false;
 
         case "always":
-            if ("pluginmanager.version-based-update.policy".equals(togglePreferenceKey)) {
+            if (PLUGINMANAGER_VERSION_BASED_UPDATE_POLICY.equals(togglePreferenceKey)) {
                 Logging.info(tr("Running plugin update after JOSM upgrade. Automatic update at startup is enabled."));
-            } else if ("pluginmanager.time-based-update.policy".equals(togglePreferenceKey)) {
+            } else if (PLUGINMANAGER_TIME_BASED_UPDATE_POLICY.equals(togglePreferenceKey)) {
                 Logging.info(tr("Running plugin update after elapsed update interval. Automatic update at startup is disabled."));
             }
             return true;
@@ -526,14 +539,14 @@ public final class PluginHandler {
 
         ButtonSpec[] options = {
                 new ButtonSpec(
-                        tr("Update plugins"),
-                        new ImageProvider("dialogs", "refresh"),
+                        tr(UPDATE_PLUGINS),
+                        new ImageProvider(DIALOGS, "refresh"),
                         tr("Click to update the activated plugins"),
                         null /* no specific help context */
                 ),
                 new ButtonSpec(
                         tr("Skip update"),
-                        new ImageProvider("cancel"),
+                        new ImageProvider(CANCEL),
                         tr("Click to skip updating the activated plugins"),
                         null /* no specific help context */
                 )
@@ -542,7 +555,7 @@ public final class PluginHandler {
         int ret = HelpAwareOptionPane.showOptionDialog(
                 parent,
                 pnlMessage,
-                tr("Update plugins"),
+                tr(UPDATE_PLUGINS),
                 JOptionPane.WARNING_MESSAGE,
                 null,
                 options,
@@ -551,7 +564,7 @@ public final class PluginHandler {
         );
 
         if (pnlMessage.isRememberDecision()) {
-            switch(ret) {
+            switch (ret) {
             case 0:
                 Config.getPref().put(togglePreferenceKey, "always");
                 break;
@@ -576,14 +589,14 @@ public final class PluginHandler {
      */
     private static void alertMissingRequiredPlugin(Component parent, String plugin, Set<String> missingRequiredPlugin) {
         StringBuilder sb = new StringBuilder(48);
-        sb.append("<html>")
+        sb.append(HTML_START)
           .append(trn("Plugin {0} requires a plugin which was not found. The missing plugin is:",
                 "Plugin {0} requires {1} plugins which were not found. The missing plugins are:",
                 missingRequiredPlugin.size(),
                 Utils.escapeReservedCharactersHTML(plugin),
                 missingRequiredPlugin.size()))
           .append(Utils.joinAsHtmlUnorderedList(missingRequiredPlugin))
-          .append("</html>");
+          .append(HTML_END);
         ButtonSpec[] specs = {
                 new ButtonSpec(
                         tr("Download and restart"),
@@ -635,11 +648,11 @@ public final class PluginHandler {
                     // restart if some plugins have been downloaded
                     if (!task.getDownloadedPlugins().isEmpty()) {
                         // update plugin list in preferences
-                        Set<String> plugins = new HashSet<>(Config.getPref().getList("plugins"));
+                        Set<String> plugins = new HashSet<>(Config.getPref().getList(PLUGINS));
                         for (PluginInformation plugin : task.getDownloadedPlugins()) {
                             plugins.add(plugin.name);
                         }
-                        Config.getPref().putList("plugins", new ArrayList<>(plugins));
+                        Config.getPref().putList(PLUGINS, new ArrayList<>(plugins));
                         // restart
                         RestartAction.restartJOSM();
                     } else {
@@ -666,24 +679,20 @@ public final class PluginHandler {
         };
         final int selected = HelpAwareOptionPane.showOptionDialog(
                 parent,
-                "<html>" + tr("Plugin {0} requires Java version {1}. The current Java version is {2}.<br>"
+                HTML_START + tr("Plugin {0} requires Java version {1}. The current Java version is {2}.<br>"
                                 + "You have to update Java in order to use this plugin.",
                         plugin, Integer.toString(requiredVersion), Utils.getJavaVersion()
-                ) + "</html>",
-                tr("Warning"),
+                ) + HTML_END,
+                tr(WARNING),
                 JOptionPane.WARNING_MESSAGE,
                 null,
                 options,
                 options[0],
                 null
         );
-        if (selected == 1) {
-            if (Utils.isRunningJavaWebStart()) {
-                OpenBrowser.displayUrl(Config.getPref().get("openwebstart.download.url", "https://openwebstart.com/download/"));
-            } else if (!Utils.isRunningWebStart()) {
-                final String javaUrl = PlatformManager.getPlatform().getJavaUrl();
-                OpenBrowser.displayUrl(javaUrl);
-            }
+        if (selected == 1 && !Utils.isRunningWebStart()) {
+            final String javaUrl = PlatformManager.getPlatform().getJavaUrl();
+            OpenBrowser.displayUrl(javaUrl);
         }
     }
 
@@ -694,7 +703,7 @@ public final class PluginHandler {
                         +"You have to update JOSM in order to use this plugin.</html>",
                         plugin, Integer.toString(requiredVersion), Version.getInstance().getVersionString()
                 ),
-                tr("Warning"),
+                tr(WARNING),
                 JOptionPane.WARNING_MESSAGE,
                 null
         );
@@ -762,22 +771,8 @@ public final class PluginHandler {
         String requires = local ? plugin.localrequires : plugin.requires;
 
         // make sure the dependencies to other plugins are not broken
-        //
         if (requires != null) {
-            Set<String> pluginNames = new HashSet<>();
-            for (PluginInformation pi: plugins) {
-                pluginNames.add(pi.name);
-                if (pi.provides != null) {
-                    pluginNames.add(pi.provides);
-                }
-            }
-            Set<String> missingPlugins = new HashSet<>();
-            List<String> requiredPlugins = local ? plugin.getLocalRequiredPlugins() : plugin.getRequiredPlugins();
-            for (String requiredPlugin : requiredPlugins) {
-                if (!pluginNames.contains(requiredPlugin)) {
-                    missingPlugins.add(requiredPlugin);
-                }
-            }
+            Set<String> missingPlugins = findMissingPlugins(plugins, plugin, local);
             if (!missingPlugins.isEmpty()) {
                 if (parent != null) {
                     alertMissingRequiredPlugin(parent, plugin.name, missingPlugins);
@@ -786,6 +781,31 @@ public final class PluginHandler {
             }
         }
         return true;
+    }
+
+    /**
+     * Find the missing plugin(s) for a specified plugin
+     * @param plugins The currently loaded plugins
+     * @param plugin The plugin to find the missing information for
+     * @param local Determines if the local or up-to-date plugin dependencies are to be checked.
+     * @return A set of missing plugins for the given plugin
+     */
+    private static Set<String> findMissingPlugins(Collection<PluginInformation> plugins, PluginInformation plugin, boolean local) {
+        Set<String> pluginNames = new HashSet<>();
+        for (PluginInformation pi: plugins) {
+            pluginNames.add(pi.name);
+            if (pi.provides != null) {
+                pluginNames.add(pi.provides);
+            }
+        }
+        Set<String> missingPlugins = new HashSet<>();
+        List<String> requiredPlugins = local ? plugin.getLocalRequiredPlugins() : plugin.getRequiredPlugins();
+        for (String requiredPlugin : requiredPlugins) {
+            if (!pluginNames.contains(requiredPlugin)) {
+                missingPlugins.add(requiredPlugin);
+            }
+        }
+        return missingPlugins;
     }
 
     /**
@@ -810,6 +830,7 @@ public final class PluginHandler {
      *
      * @param plugins the plugins to add
      */
+    @SuppressWarnings("PMD.CloseResource") // NOSONAR We do *not* want to close class loaders in this method...
     private static void extendJoinedPluginResourceCL(Collection<PluginInformation> plugins) {
         // iterate all plugins and collect all libraries of all plugins:
         File pluginDir = Preferences.main().getPluginsDirectory();
@@ -860,7 +881,7 @@ public final class PluginHandler {
             Logging.error(e);
         }
         if (msg != null && confirmDisablePlugin(parent, msg, plugin.name)) {
-            PreferencesUtils.removeFromList(Config.getPref(), "plugins", plugin.name);
+            PreferencesUtils.removeFromList(Config.getPref(), PLUGINS, plugin.name);
         }
     }
 
@@ -893,35 +914,10 @@ public final class PluginHandler {
             if (toLoad.isEmpty())
                 return;
 
-            for (PluginInformation info : toLoad) {
-                PluginClassLoader cl = AccessController.doPrivileged((PrivilegedAction<PluginClassLoader>)
-                    () -> new PluginClassLoader(
-                        info.libraries.toArray(new URL[0]),
-                        PluginHandler.class.getClassLoader(),
-                        null));
-                classLoaders.put(info.name, cl);
-            }
+            generateClassloaders(toLoad);
 
             // resolve dependencies
-            for (PluginInformation info : toLoad) {
-                PluginClassLoader cl = classLoaders.get(info.name);
-                DEPENDENCIES:
-                for (String depName : info.getLocalRequiredPlugins()) {
-                    for (PluginInformation depInfo : toLoad) {
-                        if (isDependency(depInfo, depName)) {
-                            cl.addDependency(classLoaders.get(depInfo.name));
-                            continue DEPENDENCIES;
-                        }
-                    }
-                    for (PluginProxy proxy : pluginList) {
-                        if (isDependency(proxy.getPluginInformation(), depName)) {
-                            cl.addDependency(proxy.getClassLoader());
-                            continue DEPENDENCIES;
-                        }
-                    }
-                    Logging.error("unable to find dependency " + depName + " for plugin " + info.getName());
-                }
-            }
+            resolveDependencies(toLoad);
 
             extendJoinedPluginResourceCL(toLoad);
             ResourceProvider.addAdditionalClassLoaders(getResourceClassLoaders());
@@ -933,6 +929,56 @@ public final class PluginHandler {
             }
         } finally {
             monitor.finishTask();
+        }
+    }
+
+    /**
+     * Generate classloaders for a list of plugins
+     * @param toLoad The plugins to generate the classloaders for
+     */
+    @SuppressWarnings({"squid:S2095", "PMD.CloseResource"}) // NOSONAR the classloaders and put in a map which we want to keep.
+    private static void generateClassloaders(List<PluginInformation> toLoad) {
+        for (PluginInformation info : toLoad) {
+            PluginClassLoader cl = AccessController.doPrivileged((PrivilegedAction<PluginClassLoader>)
+                    () -> new PluginClassLoader(
+                            info.libraries.toArray(new URL[0]),
+                            PluginHandler.class.getClassLoader(),
+                            null));
+            classLoaders.put(info.name, cl);
+        }
+    }
+
+    /**
+     * Resolve dependencies for a list of plugins
+     * @param toLoad The plugins to resolve dependencies for
+     */
+    @SuppressWarnings({"squid:S2095", "PMD.CloseResource"}) // NOSONAR the classloaders are from a persistent map
+    private static void resolveDependencies(List<PluginInformation> toLoad) {
+        for (PluginInformation info : toLoad) {
+            PluginClassLoader cl = classLoaders.get(info.name);
+            for (String depName : info.getLocalRequiredPlugins()) {
+                boolean finished = false;
+                for (PluginInformation depInfo : toLoad) {
+                    if (isDependency(depInfo, depName)) {
+                        cl.addDependency(classLoaders.get(depInfo.name));
+                        finished = true;
+                        break;
+                    }
+                }
+                if (finished) {
+                    continue;
+                }
+                boolean found = false;
+                for (PluginProxy proxy : pluginList) {
+                    if (isDependency(proxy.getPluginInformation(), depName)) {
+                        found = cl.addDependency(proxy.getClassLoader());
+                        break;
+                    }
+                }
+                if (!found) {
+                    Logging.error("unable to find dependency " + depName + " for plugin " + info.getName());
+                }
+            }
         }
     }
 
@@ -991,6 +1037,8 @@ public final class PluginHandler {
      * @return the map of locally available plugin information, null in case of errors
      *
      */
+    @Nullable
+    @SuppressWarnings("squid:S1168") // The null return is part of the API for this method.
     private static Map<String, PluginInformation> loadLocallyAvailablePluginInformation(ProgressMonitor monitor) {
         if (monitor == null) {
             monitor = NullProgressMonitor.INSTANCE;
@@ -1004,6 +1052,7 @@ public final class PluginHandler {
                 Logging.error(e);
                 return null;
             } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
                 Logging.warn("InterruptedException in " + PluginHandler.class.getSimpleName()
                         + " while loading locally available plugin information");
                 return null;
@@ -1019,20 +1068,19 @@ public final class PluginHandler {
     }
 
     private static void alertMissingPluginInformation(Component parent, Collection<String> plugins) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("<html>")
-          .append(trn("JOSM could not find information about the following plugin:",
-                "JOSM could not find information about the following plugins:",
-                plugins.size()))
-          .append(Utils.joinAsHtmlUnorderedList(plugins))
-          .append(trn("The plugin is not going to be loaded.",
-                "The plugins are not going to be loaded.",
-                plugins.size()))
-          .append("</html>");
+        String sb = HTML_START +
+                trn("JOSM could not find information about the following plugin:",
+                        "JOSM could not find information about the following plugins:",
+                        plugins.size()) +
+                Utils.joinAsHtmlUnorderedList(plugins) +
+                trn("The plugin is not going to be loaded.",
+                        "The plugins are not going to be loaded.",
+                        plugins.size()) +
+                HTML_END;
         HelpAwareOptionPane.showOptionDialog(
                 parent,
-                sb.toString(),
-                tr("Warning"),
+                sb,
+                tr(WARNING),
                 JOptionPane.WARNING_MESSAGE,
                 ht("/Plugin/Loading#MissingPluginInfos")
         );
@@ -1053,7 +1101,7 @@ public final class PluginHandler {
         }
         try {
             monitor.beginTask(tr("Determining plugins to load..."));
-            Set<String> plugins = new HashSet<>(Config.getPref().getList("plugins", new LinkedList<>()));
+            Set<String> plugins = new HashSet<>(Config.getPref().getList(PLUGINS, new LinkedList<>()));
             Logging.debug("Plugins list initialized to {0}", plugins);
             String systemProp = Utils.getSystemProperty("josm.plugins");
             if (systemProp != null) {
@@ -1087,7 +1135,7 @@ public final class PluginHandler {
 
     private static void alertFailedPluginUpdate(Component parent, Collection<PluginInformation> plugins) {
         StringBuilder sb = new StringBuilder(128);
-        sb.append("<html>")
+        sb.append(HTML_START)
           .append(trn(
                 "Updating the following plugin has failed:",
                 "Updating the following plugins has failed:",
@@ -1101,7 +1149,7 @@ public final class PluginHandler {
                 "Please open the Preference Dialog after JOSM has started and try to update it manually.",
                 "Please open the Preference Dialog after JOSM has started and try to update them manually.",
                 plugins.size()))
-          .append("</html>");
+          .append(HTML_END);
         HelpAwareOptionPane.showOptionDialog(
                 parent,
                 sb.toString(),
@@ -1183,6 +1231,7 @@ public final class PluginHandler {
                 Logging.error(e);
                 // don't abort in case of error, continue with downloading plugins below
             } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
                 Logging.warn(tr("Failed to download plugin information list") + ": InterruptedException");
                 // don't abort in case of error, continue with downloading plugins below
             }
@@ -1221,7 +1270,7 @@ public final class PluginHandler {
                 pluginDownloadTask = new PluginDownloadTask(
                         monitor.createSubTaskMonitor(1, false),
                         pluginsToDownload,
-                        tr("Update plugins")
+                        tr(UPDATE_PLUGINS)
                         );
                 future = MainApplication.worker.submit(pluginDownloadTask);
 
@@ -1232,6 +1281,7 @@ public final class PluginHandler {
                     alertFailedPluginUpdate(parent, pluginsToUpdate);
                     return plugins;
                 } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
                     Logging.warn("InterruptedException in " + PluginHandler.class.getSimpleName()
                             + " while updating plugins");
                     alertFailedPluginUpdate(parent, pluginsToUpdate);
@@ -1253,7 +1303,7 @@ public final class PluginHandler {
         if (pluginsWanted == null) {
             // if all plugins updated, remember the update because it was successful
             Config.getPref().putInt("pluginmanager.version", Version.getInstance().getVersion());
-            Config.getPref().put("pluginmanager.lastupdate", Long.toString(System.currentTimeMillis()));
+            Config.getPref().put(PLUGINMANAGER_LASTUPDATE, Long.toString(System.currentTimeMillis()));
         }
         return plugins;
     }
@@ -1269,14 +1319,14 @@ public final class PluginHandler {
     public static boolean confirmDisablePlugin(Component parent, String reason, String name) {
         ButtonSpec[] options = {
                 new ButtonSpec(
-                        tr("Disable plugin"),
-                        new ImageProvider("dialogs", "delete"),
+                        tr(DISABLE_PLUGIN),
+                        new ImageProvider(DIALOGS, "delete"),
                         tr("Click to delete the plugin ''{0}''", name),
                         null /* no specific help context */
                 ),
                 new ButtonSpec(
                         tr("Keep plugin"),
-                        new ImageProvider("cancel"),
+                        new ImageProvider(CANCEL),
                         tr("Click to keep the plugin ''{0}''", name),
                         null /* no specific help context */
                 )
@@ -1284,7 +1334,7 @@ public final class PluginHandler {
         return 0 == HelpAwareOptionPane.showOptionDialog(
                     parent,
                     reason,
-                    tr("Disable plugin"),
+                    tr(DISABLE_PLUGIN),
                     JOptionPane.WARNING_MESSAGE,
                     null,
                     options,
@@ -1483,26 +1533,26 @@ public final class PluginHandler {
         final ButtonSpec[] options = {
                 new ButtonSpec(
                         tr("Update plugin"),
-                        new ImageProvider("dialogs", "refresh"),
+                        new ImageProvider(DIALOGS, "refresh"),
                         tr("Click to update the plugin ''{0}''", plugin.getPluginInformation().name),
                         null /* no specific help context */
                 ),
                 new ButtonSpec(
-                        tr("Disable plugin"),
-                        new ImageProvider("dialogs", "delete"),
+                        tr(DISABLE_PLUGIN),
+                        new ImageProvider(DIALOGS, "delete"),
                         tr("Click to disable the plugin ''{0}''", plugin.getPluginInformation().name),
                         null /* no specific help context */
                 ),
                 new ButtonSpec(
                         tr("Keep plugin"),
-                        new ImageProvider("cancel"),
+                        new ImageProvider(CANCEL),
                         tr("Click to keep the plugin ''{0}''", plugin.getPluginInformation().name),
                         null /* no specific help context */
                 )
         };
 
         final StringBuilder msg = new StringBuilder(256);
-        msg.append("<html>")
+        msg.append(HTML_START)
            .append(tr("An unexpected exception occurred that may have come from the ''{0}'' plugin.",
                    Utils.escapeReservedCharactersHTML(plugin.getPluginInformation().name)))
            .append("<br>");
@@ -1512,13 +1562,13 @@ public final class PluginHandler {
                .append("<br>");
         }
         msg.append(tr("Try updating to the newest version of this plugin before reporting a bug."))
-           .append("</html>");
+           .append(HTML_END);
 
         try {
             FutureTask<Integer> task = new FutureTask<>(() -> HelpAwareOptionPane.showOptionDialog(
                     MainApplication.getMainFrame(),
                     msg.toString(),
-                    tr("Update plugins"),
+                    tr(UPDATE_PLUGINS),
                     JOptionPane.QUESTION_MESSAGE,
                     null,
                     options,
@@ -1527,7 +1577,10 @@ public final class PluginHandler {
             ));
             GuiHelper.runInEDT(task);
             return task.get();
-        } catch (InterruptedException | ExecutionException e) {
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            Logging.warn(e);
+        } catch (ExecutionException e) {
             Logging.warn(e);
         }
         return -1;
@@ -1589,7 +1642,7 @@ public final class PluginHandler {
             // don't know what plugin threw the exception
             return null;
 
-        Set<String> plugins = new HashSet<>(Config.getPref().getList("plugins"));
+        Set<String> plugins = new HashSet<>(Config.getPref().getList(PLUGINS));
         final PluginInformation pluginInfo = plugin.getPluginInformation();
         if (!plugins.contains(pluginInfo.name))
             // plugin not activated ? strange in this context but anyway, don't bother
@@ -1604,7 +1657,7 @@ public final class PluginHandler {
         case 1:
             // deactivate the plugin
             plugins.remove(plugin.getPluginInformation().name);
-            Config.getPref().putList("plugins", new ArrayList<>(plugins));
+            Config.getPref().putList(PLUGINS, new ArrayList<>(plugins));
             GuiHelper.runInEDTAndWait(() -> JOptionPane.showMessageDialog(
                     MainApplication.getMainFrame(),
                     tr("The plugin has been removed from the configuration. Please restart JOSM to unload the plugin."),
@@ -1623,7 +1676,7 @@ public final class PluginHandler {
      * @return The list of loaded plugins
      */
     public static Collection<String> getBugReportInformation() {
-        final Collection<String> pl = new TreeSet<>(Config.getPref().getList("plugins", new LinkedList<>()));
+        final Collection<String> pl = new TreeSet<>(Config.getPref().getList(PLUGINS, new LinkedList<>()));
         for (final PluginProxy pp : pluginList) {
             PluginInformation pi = pp.getPluginInformation();
             pl.remove(pi.name);
@@ -1643,7 +1696,7 @@ public final class PluginHandler {
             String name = info.name
             + (!Utils.isEmpty(info.localversion) ? " Version: " + info.localversion : "");
             pluginTab.add(new JLabel(name), GBC.std());
-            pluginTab.add(Box.createHorizontalGlue(), GBC.std().fill(GBC.HORIZONTAL));
+            pluginTab.add(Box.createHorizontalGlue(), GBC.std().fill(GridBagConstraints.HORIZONTAL));
             pluginTab.add(new JButton(new PluginInformationAction(info)), GBC.eol());
 
             JosmTextArea description = new JosmTextArea(info.description == null ? tr("no description available")
@@ -1656,7 +1709,7 @@ public final class PluginHandler {
             description.setBackground(UIManager.getColor("Panel.background"));
             description.setCaretPosition(0);
 
-            pluginTab.add(description, GBC.eop().fill(GBC.HORIZONTAL));
+            pluginTab.add(description, GBC.eop().fill(GridBagConstraints.HORIZONTAL));
         }
         return pluginTab;
     }
